[gd_scene load_steps=23 format=3 uid="uid://bhq5di360bpq"]

[ext_resource type="Script" uid="uid://c20uyujbxudwl" path="res://Scenes/Hub World/NPCs/npc.gd" id="1_yd8wa"]
[ext_resource type="Texture2D" uid="uid://cv72qdhhgyvq6" path="res://Assets/overworldnpc.png" id="2_3n7rn"]
[ext_resource type="PackedScene" uid="uid://bqf0ogbf8b4g8" path="res://Scenes/Hub World/NPCs/dialog/chat_box.tscn" id="3_3n7rn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d53a0"]
atlas = ExtResource("2_3n7rn")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl3lm"]
atlas = ExtResource("2_3n7rn")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6km50"]
atlas = ExtResource("2_3n7rn")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqba8"]
atlas = ExtResource("2_3n7rn")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlxui"]
atlas = ExtResource("2_3n7rn")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmo53"]
atlas = ExtResource("2_3n7rn")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_40uyl"]
atlas = ExtResource("2_3n7rn")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7q145"]
atlas = ExtResource("2_3n7rn")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewgf8"]
atlas = ExtResource("2_3n7rn")
region = Rect2(96, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_marv1"]
atlas = ExtResource("2_3n7rn")
region = Rect2(112, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o8cl"]
atlas = ExtResource("2_3n7rn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lfej"]
atlas = ExtResource("2_3n7rn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pgs5"]
atlas = ExtResource("2_3n7rn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkan7"]
atlas = ExtResource("2_3n7rn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tdffh"]
atlas = ExtResource("2_3n7rn")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bersd"]
atlas = ExtResource("2_3n7rn")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ofy8y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d53a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl3lm")
}],
"loop": true,
"name": &"Bro",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6km50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqba8")
}],
"loop": true,
"name": &"BusWom",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlxui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmo53")
}],
"loop": true,
"name": &"Caveman",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_40uyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7q145")
}],
"loop": true,
"name": &"ConWork",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewgf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_marv1")
}],
"loop": true,
"name": &"Cowpoke",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o8cl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lfej")
}],
"loop": true,
"name": &"Dude",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pgs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkan7")
}],
"loop": true,
"name": &"Punk",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tdffh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bersd")
}],
"loop": true,
"name": &"WiseWizard",
"speed": 2.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3n7rn"]
radius = 23.84

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d53a0"]
size = Vector2(12, 16)

[node name="NPC" type="Area2D"]
script = ExtResource("1_yd8wa")

[node name="NPC_SPRITE" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ofy8y")
animation = &"WiseWizard"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3n7rn")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_d53a0")

[node name="ChatBox" parent="." instance=ExtResource("3_3n7rn")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
